syntax = "proto3";

package qianxia.IMChat;

option go_package = "IMChat/pb";

message EmptyRequest {}