syntax = "proto3";

package qianxia.IMChat;

option go_package = "IMChat/pb";

import "command.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service FriendClusterApplyService {
    rpc CreateFriendClusterApply (CreateFriendClusterApplyRequest) returns (CreateFriendClusterApplyResponse) {
        option (google.api.http) = {
            post: "/v1/friend/apply"
            body: "*"
        };
    };

    rpc ListFriendClusterApply (EmptyRequest) returns (stream ListFriendClusterApplyResponse) {
        option (google.api.http) = {
            get: "/v1/friend/apply"
        };
    };
}

message CreateFriendClusterApplyRequest {
    int32 receiver_id = 1;
    string apply_desc = 2;
    enum Flag {
        FRIEND = 0;
        CLUSTER = 1;
    }
    Flag flag = 3;
}

message CreateFriendClusterApplyResponse {
    string message = 1;
}

message ListFriendClusterApplyResponse {
    int32 apply_id = 1;
    string nickname = 2;
    string apply_desc = 3;
    int32 flag = 4;
    google.protobuf.Timestamp apply_time = 5;
}